# turbo-vpb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  background.js  fly.toml  justfile  load-test.k6.js  package-lock.json  package.json
content/: connect.html  test-phonebank.html
docs/: ackee-tracker.min.js  connect.html  connect.js  connect2.html  connect2.js  connectToExtension.js  index.html  peer-connection.js  peer-manager.js  share.html  updates.json  updates.xml
docs/_layouts/: default.html
docs/dependencies/: eruda.js.map  sentry-5.27.0-with-tracing.min.js  sentry-7.1.1-with-tracing.min.js
docs/downloads/: turbo-vpb.crx  turbovpb-0.1.0-fx.xpi  turbovpb-0.1.1-an+fx.xpi  turbovpb-0.1.2-an+fx.xpi  turbovpb-0.1.3-an+fx.xpi  turbovpb-0.2.0-an+fx.xpi  turbovpb-0.2.1-an+fx.xpi  turbovpb-0.3.0-an+fx.xpi  turbovpb-0.3.1-an+fx.xpi  turbovpb-0.3.2-an+fx.xpi  turbovpb-0.3.3-an+fx.xpi  turbovpb-0.3.4-an+fx.xpi  turbovpb-0.4.0-an+fx.xpi  turbovpb-0.4.1-an+fx.xpi  turbovpb-0.4.2-an+fx.xpi  turbovpb-0.4.3-an+fx.xpi  turbovpb-0.4.4-an+fx.xpi  turbovpb-0.5.0-an+fx.xpi  turbovpb-0.5.1-an+fx.xpi  turbovpb-0.5.2-an+fx.xpi
extension/: .web-extension-id  README.md  background.js  base64url-arraybuffer.js  bluevote.js  content.js  everyaction.js  justfile  manifest.json  openvpb.js  options.html  options.js  package-lock.json  package.json  peer-connection.js  pnpm-lock.yaml  popup.html  popup.js  share-integration.js  tailwind.config.js  tsconfig.json  vite.config.ts  vpb-common.js
extension/dependencies/: content-scripts-register-polyfill.js  kjua.js  peerjs.js  peerjs.js.map  tingle.css
extension/src/: manifest.json
extension/src/components/: connection-status-badge.tsx  message-template.tsx  qr-code-insert.tsx  qr-code-modal.tsx  qr-code.tsx  site-status-indicator.tsx  turbovpb-container.tsx  turbovpb-icon.tsx  turbovpb-logo-and-name.tsx
extension/src/lib/: crypto.ts  pubsub-client.ts  stored-signal.ts  types.ts
extension/src/pages/: background.ts  options-page.tsx  popup-page.tsx  service_worker.ts
extension/src/scripts/: bluevote.js  (+11 more)
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml  justfile
server/content/: index.html  share.html  test-phonebank.html
server/src/: main.rs  metrics.rs  pubsub.rs  stats.rs
server/static/js/: connect.js  peer-manager.js
src/: api.rs  main.rs  pages.rs  pubsub.rs  stats.rs  template.hbs
src/pages/: connect.html  index.html  share.html
src/static/: CNAME  README.md  connect.html  connect.js  index.html  peer-manager.js
static/: updates.json
static/js/: connect.js  peer-manager.js
templates/: default.html
website/: connectToExtension.js  index.html
(+18 files in other folders)
