[package]
name = "turbovpb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
dashmap = "5.3"
futures = "0.3"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20", features = ["full"] }
tower-http = { version = "0.3", features = ["compression-full", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
