[package]
name = "turbovpb-server"
authors = ["Evan Schwartz <evan@turbovpb.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.5", features = ["ws"] }
dashmap = "5.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2"
tokio = { version = "1.20", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
