[package]
name = "turbovpb-server"
authors = ["Evan Schwartz <evan@turbovpb.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.20", default-features = false, features = [
    "http1",
    "json",
    "ws",
] }
dashmap = "5.3"
futures = "0.3"
gcp-bigquery-client = "0.17"
once_cell = "1.14"
prometheus = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tinytemplate = "1.2"
tokio = { version = "1.20", default-features = false, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "time",
] }
tower-http = { version = "0.4", features = ["compression-full", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yup-oauth2 = { version = "8.3", default-features = false }

[profile.release]
lto = true
codegen-units = 1
